--- a/RL-Playground/RL-Environment.ipynb
+++ b/RL-Playground/RL-Environment.ipynb
@@ -14,6 +14,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Support method\n",
+    "\n",
+    "Discretise a float number to get concrete value. Used to set up the state spaces of the environment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -24,8 +33,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Trading Environment\n",
+    "\n",
+    "This trading environment followed the format of [Open AI's gym](https://gym.openai.com/) with respect to its `reset()` and `step()` functions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,13 +86,6 @@
     "        plt.ylabel('Current portfolio')\n",
     "        plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -93,7 +104,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
