--- a/Agents.ipynb
+++ b/Agents.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Parent Agent Class\n",
+    "## Agent Class\n",
     "\n",
     "The class defined the mechanics of any agents in the simulation"
    ]
@@ -102,7 +102,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Trend Following Traders\n",
+    "## Trend Following Agents\n",
     "\n",
     "This agents will make decisions following the trend in the market price. It will buy when the price goes above moving average price in a specific time window and sell otherwise"
    ]
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mean Reversion\n",
+    "## Mean Reversion Agents\n",
     "\n",
     "This agent algorithm is the opposition of trend following. It will goes against the market price trend. This algorithm will often lead to a more active type of agent, as its placing of orders will drive the price in the opposite direction, making it more vulnerable to trading activities."
    ]
