--- a/Simulations/TestCase-Class.ipynb
+++ b/Simulations/TestCase-Class.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,13 @@
     "        return self.n\n",
     "    \n",
     "    def get_volatility(self):\n",
-    "        variance = np.square([x - np.average(self.S) for x in self.S])\n",
+    "        price_return = self.get_price_return()[1:]\n",
+    "        variance = np.square([x - np.average(price_return) for x in price_return])\n",
     "        return math.sqrt(np.sum(variance) / (N - 1))\n",
+    "    \n",
+    "    def get_standard_deviation(self):\n",
+    "        variance = np.square([x - np.average(self.S) for x in self.S])\n",
+    "        return math.sqrt(np.sum(variance) / N)\n",
     "    \n",
     "    def get_variance(self):\n",
     "        return [self.S[i] - S[i] for i in range(N)]\n",
