--- a/Simulations/Simulation-Testings.ipynb
+++ b/Simulations/Simulation-Testings.ipynb
@@ -644,7 +644,7 @@
     }
    ],
    "source": [
-    "# robust correlation \n",
+    "# TF\n",
     "test_correlation_1 = TestCase(X, S_cos)\n",
     "test_correlation_1.add_trader(2, RandomTrader)\n",
     "test_correlation_1.add_trader(10, TrendFollower)\n",
@@ -709,18 +709,18 @@
     }
    ],
    "source": [
-    "# robust correlation \n",
-    "test_correlation_1 = TestCase(X, S_cos)\n",
-    "test_correlation_1.add_trader(2, RandomTrader)\n",
-    "test_correlation_1.add_trader(8, TrendFollower)\n",
-    "test_correlation_1.add_trader(2, MeanReversion)\n",
-    "test_correlation_1.update_price()\n",
-    "test_correlation_1.plot_price()\n",
+    "# FifthTF \n",
+    "test_correlation_2 = TestCase(X, S_cos)\n",
+    "test_correlation_2.add_trader(2, RandomTrader)\n",
+    "test_correlation_2.add_trader(8, TrendFollower)\n",
+    "test_correlation_2.add_trader(2, MeanReversion)\n",
+    "test_correlation_2.update_price()\n",
+    "test_correlation_2.plot_price()\n",
     "\n",
-    "trader1 = test_correlation_1.get_trader(0)\n",
-    "trader2 = test_correlation_1.get_trader(-1)\n",
-    "value1 = trader1.get_value(test_correlation_1.get_price())\n",
-    "value2 = trader2.get_value(test_correlation_1.get_price())\n",
+    "trader1 = test_correlation_2.get_trader(0)\n",
+    "trader2 = test_correlation_2.get_trader(-1)\n",
+    "value1 = trader1.get_value(test_correlation_2.get_price())\n",
+    "value2 = trader2.get_value(test_correlation_2.get_price())\n",
     "plt.plot(t, value1)\n",
     "plt.xlabel('Time Steps')\n",
     "plt.ylabel('Trend Follower Trader Stock Value')\n",
@@ -780,18 +780,18 @@
     }
    ],
    "source": [
-    "# robust correlation \n",
-    "test_correlation_1 = TestCase(X, S_cos)\n",
-    "test_correlation_1.add_trader(2, RandomTrader)\n",
-    "test_correlation_1.add_trader(5, TrendFollower)\n",
-    "test_correlation_1.add_trader(5, MeanReversion)\n",
-    "test_correlation_1.update_price()\n",
-    "test_correlation_1.plot_price()\n",
+    "# Half \n",
+    "test_correlation_3 = TestCase(X, S_cos)\n",
+    "test_correlation_3.add_trader(2, RandomTrader)\n",
+    "test_correlation_3.add_trader(5, TrendFollower)\n",
+    "test_correlation_3.add_trader(5, MeanReversion)\n",
+    "test_correlation_3.update_price()\n",
+    "test_correlation_3.plot_price()\n",
     "\n",
-    "trader1 = test_correlation_1.get_trader(0)\n",
-    "trader2 = test_correlation_1.get_trader(-1)\n",
-    "value1 = trader1.get_value(test_correlation_1.get_price())\n",
-    "value2 = trader2.get_value(test_correlation_1.get_price())\n",
+    "trader1 = test_correlation_3.get_trader(0)\n",
+    "trader2 = test_correlation_3.get_trader(-1)\n",
+    "value1 = trader1.get_value(test_correlation_3.get_price())\n",
+    "value2 = trader2.get_value(test_correlation_3.get_price())\n",
     "plt.plot(t, value1)\n",
     "plt.xlabel('Time Steps')\n",
     "plt.ylabel('Trend Follower Trader Stock Value')\n",
@@ -851,18 +851,18 @@
     }
    ],
    "source": [
-    "# robust correlation \n",
-    "test_correlation_1 = TestCase(X, S_cos)\n",
-    "test_correlation_1.add_trader(2, RandomTrader)\n",
-    "test_correlation_1.add_trader(2, TrendFollower)\n",
-    "test_correlation_1.add_trader(8, MeanReversion)\n",
-    "test_correlation_1.update_price()\n",
-    "test_correlation_1.plot_price()\n",
+    "# FifthMR\n",
+    "test_correlation_4 = TestCase(X, S_cos)\n",
+    "test_correlation_4.add_trader(2, RandomTrader)\n",
+    "test_correlation_4.add_trader(2, TrendFollower)\n",
+    "test_correlation_4.add_trader(8, MeanReversion)\n",
+    "test_correlation_4.update_price()\n",
+    "test_correlation_4.plot_price()\n",
     "\n",
-    "trader1 = test_correlation_1.get_trader(0)\n",
-    "trader2 = test_correlation_1.get_trader(-1)\n",
-    "value1 = trader1.get_value(test_correlation_1.get_price())\n",
-    "value2 = trader2.get_value(test_correlation_1.get_price())\n",
+    "trader1 = test_correlation_4.get_trader(0)\n",
+    "trader2 = test_correlation_4.get_trader(-1)\n",
+    "value1 = trader1.get_value(test_correlation_4.get_price())\n",
+    "value2 = trader2.get_value(test_correlation_4.get_price())\n",
     "plt.plot(t, value1)\n",
     "plt.xlabel('Time Steps')\n",
     "plt.ylabel('Trend Follower Trader Stock Value')\n",
@@ -910,16 +910,16 @@
     }
    ],
    "source": [
-    "# robust correlation \n",
-    "test_correlation_1 = TestCase(X, S_cos)\n",
-    "test_correlation_1.add_trader(2, RandomTrader)\n",
-    "test_correlation_1.add_trader(0, TrendFollower)\n",
-    "test_correlation_1.add_trader(10, MeanReversion)\n",
-    "test_correlation_1.update_price()\n",
-    "test_correlation_1.plot_price()\n",
+    "# MR \n",
+    "test_correlation_5 = TestCase(X, S_cos)\n",
+    "test_correlation_5.add_trader(2, RandomTrader)\n",
+    "test_correlation_5.add_trader(0, TrendFollower)\n",
+    "test_correlation_5.add_trader(10, MeanReversion)\n",
+    "test_correlation_5.update_price()\n",
+    "test_correlation_5.plot_price()\n",
     "\n",
-    "trader1 = test_correlation_1.get_trader(0)\n",
-    "value1 = trader1.get_value(test_correlation_1.get_price())\n",
+    "trader1 = test_correlation_5.get_trader(0)\n",
+    "value1 = trader1.get_value(test_correlation_5.get_price())\n",
     "plt.plot(t, value1)\n",
     "plt.xlabel('Time Steps')\n",
     "plt.ylabel('Trend Follower Trader Stock Value')\n",
@@ -1519,6 +1519,7 @@
     }
    ],
    "source": [
+    "# Half\n",
     "rtest_half = TestCase(X, S_real_AAPL)\n",
     "rtest_half.add_trader(10, RandomTrader)\n",
     "rtest_half.add_trader(50, TrendFollower)\n",
@@ -1575,6 +1576,7 @@
     }
    ],
    "source": [
+    "# QuarterMR\n",
     "rtest_tfquarter = TestCase(X, S_real_AAPL)\n",
     "rtest_tfquarter.add_trader(10, RandomTrader)\n",
     "rtest_tfquarter.add_trader(25, TrendFollower)\n",
@@ -1631,6 +1633,7 @@
     }
    ],
    "source": [
+    "# QuarterTF\n",
     "rtest_mrquarter = TestCase(X, S_real_AAPL)\n",
     "rtest_half.add_trader(10, RandomTrader)\n",
     "rtest_mrquarter.add_trader(75, TrendFollower)\n",
@@ -1915,42 +1918,6 @@
     "plt.ylabel('Price return of 100 mean reversion agents')\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = TestCase(X, S_cos)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.0006985185775502662"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.get_volatility()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
